# BlackboxD

./: .gitignore  Cargo.toml  README.md  README.md.save  base.py  daemon.py  dashboard.html  hyprland.py  index.html  install.sh  mock.py  models.py  pyproject.toml  registry.py
.github/workflows/: deploy.yml
blackboxd/: cli.py  config.py  daemon.py  engine.py  gnome.py  models.py  reconstructor.py
blackboxd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blackboxd/collectors/: base.py  gnome.py  hyprland.py  mock.py  registry.py
blackboxd/storage/: engine.py
blackboxd/timeline/: reconstructor.py  reconstructor.py.save  renderer.py
go-api/: go.mod  go.sum  main.go
listener/: blackboxD-listener.lua
rust-exporter/: Cargo.toml
rust-exporter/src/: main.rs
test/: test_blackboxd.py
workspacegrid/: WorkspaceGrid.css  WorkspaceGrid.tsx
