[package]
name = "rust-exporter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blackboxd-export"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.0", features = ["derive", "env"] }
